# fingerprint-ocv

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile.arch  Dockerfile.ubuntu  Dockerfile.ubuntu2210  README.md  fedora.txt  fingerprint-ocv.service  vcpkg.json
docs/: drv.py  fpc.c  fpc.h  note.txt
src/: CMakeLists.txt  async.hpp  cvext.cpp  cvext.hpp  inotify.hpp  main.cpp  manager.cpp  manager.hpp  test_cvext.cpp  test_dbus_call.cpp  test_dbus_service.cpp
src/drv_fpc/: CMakeLists.txt  crypto.cpp  crypto.hpp  fingerprint.cpp  fingerprint.hpp  fpc9201.cpp  fpc9201.hpp  fpcbio.cpp  fpcbio.hpp
